# nimbledev

./: .env.example  .gitignore  CONTRIBUTING.md  MODULE_1.md  MODULE_2.md  MODULE_3.md  MODULE_4.md  MODULE_5.md  MODULE_6.md  MODULE_7.md  MODULE_8.md  README.md  main.py  pyproject.toml  setup.sh
agents/: code_analyst.py  diff_parser.py  fix_writer.py  issue_reader.py  json_utils.py  llm.py  pr_agent.py  review_critic.py  reviewer.py  schemas.py
config/: settings.py
mcp_server/: github_mcp.py
memory/: __init__.py  embedder.py  store.py
observability/: __init__.py  logger.py  tracker.py
tests/: test_agent_parsing.py  test_agent_retry.py  test_cli_surface.py  test_comment_tone.py  test_imports.py  test_llm_adapter.py  test_onboarding.py  test_tool_surface.py
tools/: github.py
