[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbledev"
version = "0.1.0"
description = "Multi-agent open source contributor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.102.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "rich>=15.0.0",
    "structlog>=24.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "mcp>=1.0.0",
]

[tool.setuptools]
packages = ["agents", "config", "memory", "mcp_server", "observability", "tools"]
