[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbledev"
version = "0.1.0"
description = "Agentic pull request review assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.102.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
    "rich>=15.0.0",
]

[tool.setuptools]
packages = ["agents", "config", "tools"]
